force-app/main/default/objects/HAM_Group_Member__c/HAM_Group_Member__c.object-meta.xml
<CustomObject>
    <description>Stores comprehensive data and attributes for individual group members.</description>
    <label>HAM Group Member</label>
    <nameField>
        <displayFormat>GrpMem-{00000}</displayFormat>
        <label>HAM Group Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>