force-app/main/default/objects/HAM_Group_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The portal constituent.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HAM Group Members</relationshipLabel>
    <relationshipName>HAM_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>