force-app/main/default/objects/HAM_Group_Member__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Parent Group.</description>
    <label>Group</label>
    <referenceTo>HAM_Group__c</referenceTo>
    <relationshipLabel>HAM Group Members</relationshipLabel>
    <relationshipName>HAM_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>