force-app/main/default/objects/HAM_Group_Member__c/fields/Join_Request_Message__c.field-meta.xml
<CustomField>
    <fullName>Join_Request_Message__c</fullName>
    <label>Join Request Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>