force-app/main/default/objects/HAM_Group_Member__c/fields/Leave_Reason__c.field-meta.xml
<CustomField>
    <fullName>Leave_Reason__c</fullName>
    <label>Leave Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Irrelevant content</fullName>
            </value>
            <value>
                <fullName>Low value</fullName>
            </value>
            <value>
                <fullName>Inactive group</fullName>
            </value>
            <value>
                <fullName>Negative experience</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>