force-app/main/default/objects/HAM_Group_Member__c/fields/Leave_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Leave_Reason_Other__c</fullName>
    <label>Leave Reason (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>