force-app/main/default/objects/HAM_Group_Member__c/fields/Notify_on_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notify_on_Comments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Granular toggle. Default: True.</description>
    <label>Notify on Comments</label>
    <type>Checkbox</type>
</CustomField>