force-app/main/default/objects/HAM_Group_Member__c/fields/Notify_on_Tagged__c.field-meta.xml
<CustomField>
    <fullName>Notify_on_Tagged__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Granular toggle. Default: True</description>
    <label>Notify on Tagged</label>
    <type>Checkbox</type>
</CustomField>