force-app/main/default/objects/HAM_Group_Member__c/fields/Receive_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Receive_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master toggle for group alerts. Default: True.</description>
    <label>Receive Notifications</label>
    <type>Checkbox</type>
</CustomField>